fix: color, spacing

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -149,7 +149,7 @@
   --positive: hsl(151 45% 56%);
   --positive-foreground: hsl(0 0% 100%);
 
-  --warning: hsl(32 78% 56%);
+  --warning: hsl(43 95% 46%);
   --warning-foreground: hsl(0 0% 100%);
 
   --negative: hsl(0 59% 60%);
